--- a/images/styles.css
+++ b/images/styles.css
@@ -57,7 +57,7 @@ main{
     width: 500px;
     height: 400px;
     position: absolute;
-    left: 1000px;
+    left: 800px;
     top: 153px;
 }
 
@@ -66,6 +66,8 @@ main{
 .players{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 27px;
     width: 330px;
     height: 474px;
     position: absolute;
@@ -77,7 +79,7 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid orchid;
+    box-shadow: 1px 1px 8px 3px rgba(112, 128, 144, 0.432);
     padding: 15px 15px 33px 15px;
     
     
@@ -85,6 +87,7 @@ main{
 .player-details img{
     width: 300px;
     height: 256px;
+    border-radius: 10px;
 }
 
 
@@ -106,4 +109,21 @@ footer{
    position: absolute;
    left: 475px;
    top: 3474px;
+}
+footer img{
+    width: 484px;
+    height: 110px;
+    margin: 20px 0;
+}
+.social-icon img{
+    
+    width: 32px;
+    height: 32px;
+    right: 157px;
+    margin-top: 35px;
+    margin-bottom: 0px;
+    padding-right: 8px;
+}
+footer p{
+    color: slategray;
 }
