--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color:#f3f1ff;
 
 }
 main{
@@ -18,6 +17,47 @@ main{
     align-items: center;
 }
 /* Styles for Header */
+.navigation-bar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0px;
+    position: absolute;
+    width: 1160px;
+    height: 44px;
+    left: 156px;
+    top: 20px;
+}
+.navigation-menu a{
+    text-decoration: none;
+    padding-right: 10px;
+    color: #ffffff;
+}
+.login{
+    padding-left: 5px;
+    color: #ffffff;
+    margin-left: 500px;
+    background-color: rgb(81, 129, 9);
+    width: 80px;
+    height: 44px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.login img{
+    width: 24px;
+    height: 24px;
+}
+.login a{
+    text-decoration: none;
+    color: #ffffff;
+    padding-left: 2px;
+}
+.top-section:hover .login{
+    background-color: slategray;
+    padding: 20px;
+    transition: .6s;
+}
 .top-section{
     width: 1440px;
     height: 677px;
@@ -26,9 +66,9 @@ main{
     left: 0;
     top: 0;
 }
+
 .header{
     display: flex;
-    width: 50%;
 
 }
 .header-info h1{
@@ -51,7 +91,6 @@ main{
     left: 156px;
     top: 500px;
     padding: 10px 24px;
-    
 }
 .header-image img{
     width: 500px;
