--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-/* Styling Fonts */
+/* **********
+Styling Fonts
+************* */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
 
-/* -------------------------
+/* ***********************
 common style and utilities 
--------------------------- */
+************************** */
 body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -16,7 +18,9 @@ main{
     flex-direction: column;
     align-items: center;
 }
-/* Styles for Header */
+/****************** 
+Styles for Header
+*******************/
 .navigation-bar{
     display: flex;
     flex-direction: row;
@@ -100,7 +104,9 @@ main{
     top: 153px;
 }
 
-/* Styles for Players */
+/* ******************
+Styles for Players
+********************* */
 
 .players{
     display: grid;
@@ -137,7 +143,9 @@ main{
 
 
 
-
+/* ****************
+Styles for Footer
+***************** */
 footer{
    display: flex;
    flex-direction: column;
@@ -165,4 +173,5 @@ footer img{
 }
 footer p{
     color: slategray;
+    font-size:small;
 }
